2005-01-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* stones.png: Expand to have four colours. Also pad out to have 16
	frames. There is still a glitch in the animation though.

2005-01-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c:
	* same-gnome.h:
	* drawing.c:
	* ui.c: Add support for user-supplied themes.

	* drawing.h:
	* drawing.c:
	* ui.c: Finish the theme dialog and implement theme changing.

2005-01-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c (theme_cb): Start a theme dialog.
	(build_gui): Remove deprecated gnome_* functions.

2005-01-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c: Rework the end of game dialogs.

2005-01-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* input.c: 
	* game.c:
	* ui.c:
	* same-gnome.c:
	* drawing.c:
	* globals.h:
	* same-gnome.h: globals.h -> same-gnome.h .

2005-01-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c: Make sure we update game_size properly. 

	* same-gnome.c: 	
	* game.c:
	* game.h:
	* ui.c: Add support for the high scores dialog.

2005-01-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c: Add quit and new game buttons to the game over
	dialog. Other minor cleanups.

2004-12-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c:
	* ui.c:
	* ui.h: Further tweaks to the message interface.

	* ui.h:
	* ui.c:
	* input.c:
	* drawing.c: Provide a helpful "n objects selected" message.

	* ui.h:
	* ui.c: Rework the status bar so that it is no longer a
	statusbar. It now looks like gnomine.

2004-12-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c:
	* game.h: Tweaks for undo during an animation.

	* drawing.c:
	* ui.c: 
	* ui.h:
	* game.h:
	* globals.h:
	* same-gnome.c:
	* game.c: Implement Undo/Redo.

2004-12-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c:
	* globals.h:
	* game.c:
	* input.c: Cleanups.

	* ui.c: Fullscreen now works.

2004-12-26  Callum McKenzie  <callum@physics.otago.ac.nz>
